client/src/StudentDashboard/styles.css
.fullHeight {
	height: 100%;
	display: flex;
	flex-flow: column;
}

.navBar {
	height: 60px;
	z-index: 100;
}

.contentContainer {
	display: flex;
	width: 100%;
	/*height: 100%;*/
	flex: 1;
	background-color: #0C1F2C;
	z-index: 1;
	justify-content: space-around;
	align-items: center;
}

.leftButtonContainer {
	min-width: 200px;
	/*width: 200px;
	height: 70px;*/
	margin: 30px;

}

.leftDoubleButtonContainer {
	margin-top: 0px;
    display: flex;
    flex-flow: column;
    height: 65vh;
    justify-content: space-between;

}

.rightButtonContainer {
	min-width: 200px;
	/*width: 200px;
	height: 70px;*/
	margin: 30px;

}


.leftButtonContainer, .rightButtonContainer {
	margin-top: 30%;
}

.bookpageContainer {
	width: 400px;
	height: 80%;
	background-color: white;
}


.routeTransition, .routeTransition > div  {
	width: 100%;
	height: 100%;
}

.doneModal {
	/*background-color: green;
	opacity: 0.5;*/
}

.doneModalZZZ {

}

.doneModal > div {
	width: 450px; /* sets the width of the modal */
}

.fill {
	position: absolute;
	left: 0;
	top: 0;
	right: 0;
	bottom: 0;	
}

.fullWidthHeight {
	width: 100%;
	height: 100%;
}

.modalBackdropXXX {
	position: absolute;
	left: 0;
	top: 0;
	right: 0;
	bottom: 0;
	background-color: green;
	opacity: 0.3;
}


.myQuestionMarkIcon {
	position: relative;
    top: -46px;
    left: 30px;
    font-size: 1.5em;
    color: white;
}

